# arxis

./: .env.example  .gitignore  .vs.instructions.md  .vscode.instructions.md  ACTION-PLAN.md  ADMIN_DASHBOARD_GUIDE.md  ANALYTICS_SETUP.md  APPLICATIONS.md  ARXIS-FINAL-REPORT.md  AVL_INTEGRATION.md  AVL_PLATFORM_COMPLETE.md  AVX_README.md  BADGES.md  BIOLOGICAL_EMAIL_SYSTEM.md  CARGO_TOML_ANALYSIS.md  CHANGELOG.md  CLARITY_INTEGRATION.md  CNAME  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTORS.md  CRATES_IO_GUIDE.md  CRATES_IO_STATUS.md  Cargo.toml  Cargo.toml.backup  DEMO_RESULTADOS.md  DEPLOYMENT_GUIDE.md  DEPLOY_AZURE.md  ECOSYSTEM_SYNC.md  ENVIRONMENT_SETUP.md  FIRST-REALEASE.md  First Agent - Config.json  First Agent - History.md  First Agent - Logs.md  GEOMETRY4D_GUIDE.md  GITHUB_ORGANIZATION_GUIDE.md  GITHUB_SETUP_COMPLETE.md  GOVERNANCE.md  GUIA-COPILOTS-NOTEBOOK1.md  IMPLEMENTATION_PROGRESS.md  (+52 more)
ai/: CHANGELOG.md  Cargo.toml  README.md
arxis-bim-platform/: Cargo.toml  EXECUTIVE-SUMMARY.md  IMPLEMENTATION-COMPLETE.md  PIPELINE-ARCHITECTURE.md  QUICK-START.md  README-IMPLEMENTATION.md  README.md  docker-compose.yml
arxis-bim-platform/avila-bim-converter/: Cargo.toml
arxis-bim-platform/avila-bim-core/: Cargo.toml
arxis-bim-platform/avila-gltf/: Cargo.toml  README.md
arxis-bim-platform/avila-ifc/: Cargo.toml
arxis-bim-platform/avila-mesh/: Cargo.toml  README.md
arxis-bim-platform/avila-metadata-extractor/: Cargo.toml  README.md
arxis-bim-platform/avila-optimizer/: Cargo.toml  README.md
arxis-bim-platform/avila-tesselation/: Cargo.toml  README.md
arxis-bim-platform/avila-vec3d/: Cargo.toml  README.md
avila-aead/: Cargo.toml  README.md
avila-aead/src/: lib.rs
avila-ai-workspace/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  STATUS.md  TECHNICAL.md  aviladb.toml  build.ps1  build.sh  test.ps1
avila-ai-workspace/avila-crypto/: Cargo.toml
avila-ai-workspace/avila-math/: Cargo.toml
avila-ai-workspace/avila-nucleus/: Cargo.toml
avila-ai-workspace/avila-primitives/: Cargo.toml
avila-ai-workspace/avila-quinn/: Cargo.toml
avila-ai-workspace/aviladb-core/: Cargo.toml
avila-alloc/: Cargo.toml  README.md
avila-alloc/src/: lib.rs
avila-analises/: Cargo.toml  README.md  README_API.md
avila-analises/avila-location/: Cargo.toml  README.md
avila-analises/src/: dashboard.rs  main.rs  models.rs  prediction.rs  segmentation.rs  server.rs  tracker.rs
avila-arrow/: Cargo.toml  NEXT-LEVEL.md  README.md  copilot-instructions.md
avila-arrow/benches/: compression_bench.rs  simd_bench.rs
avila-arrow/examples/: compression.rs
avila-arrow/src/: array.rs  compute.rs  datatypes.rs  error.rs  lib.rs  scientific.rs  simd.rs
avila-arxis/: Cargo.toml  README.md  lib.rs
avila-arxis/geometry/: mod.rs
avila-arxis/physics/: gravitational_lensing.rs  lisa_binary.rs  lisa_telemetry.rs
avila-arxis/tensor/: mod.rs
avila-atom/: CHANGELOG.md  Cargo.toml  README.md
avila-atom/src/: lib.rs  lib_v2.rs
avila-browser/: .gitignore  .global-cache  BANNER.txt  Cargo.toml  DEPLOYMENT.md  LICENSE-MIT  README.md  SUMMARY.md  build.ps1  build_errors.txt  fix_browser.sh  fix_dom.py  installer.iss  new_extract_title.txt  publish.ps1  temp_extract_title.txt
avila-browser/docs/: CNAME  RELEASE.md  SETUP.md  index.html  robots.txt  sitemap.xml
avila-browser/examples/: browser_demo.rs  native_demo.rs  real_network.rs  reqwest_demo.rs  seven_layers.rs
avila-browser/src/: lib.rs
avila-buffer/: Cargo.toml  README.md
avila-buffer/src/: lib.rs
avila-cell/: Cargo.toml  Cargo.toml.bkp  README.md
avila-cell/examples/: basic_usage.rs  gmail_client.rs
avila-cell/src/: auth.rs  calendar.rs  classifier.rs  dkim.rs  encoding.rs  imap.rs  lib.rs  message.rs  mime.rs  pool.rs  pop3.rs  queue.rs  smtp.rs  template.rs
avila-cli/: ADVANCED.md  CHANGELOG.md  Cargo.toml  README.md
avila-cli/src/: lib.rs
avila-clustering/: BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  PUBLISHING.md  README.md  README_NEW.md  STATUS.md  chat.md  copilot-instructions.md
avila-clustering/benches/: Cargo.toml  clustering_benchmarks.rs
avila-clustering/examples/: anomaly_detection.rs  basic_clustering.rs  customer_segmentation.rs  image_segmentation.rs  social_network.rs  streaming_clustering.rs  timeseries_clustering.rs
avila-clustering/src/: lib.rs  prelude.rs
avila-codec/: Cargo.toml  README.md
avila-codec/src/: lib.rs
avila-compress/: BEST-PRACTICES.md  CHANGELOG.md  Cargo.toml  NEXT-LEVEL.md  README.md  RELEASE-v0.2.0.md  RELEASE-v0.3.0.md  SIMD-SUMMARY.md  STATUS.md
avila-compress/.github/: copilot-instructions.md
avila-compress/benches/: compression_benchmark.rs  lz4_bench.rs
avila-compress/examples/: checksums.rs  columnar.rs
avila-compress/src/: columnar.rs  format.rs  lib.rs  lz4.rs  metrics.rs  simd.rs  stream.rs
avila-config/: Cargo.toml
avila-config/src/: lib.rs
avila-core-workspace/: Cargo.toml  PROGRESS.md  README.md  debug_mul_mod.rs  test_secp256k1.rs
avila-core-workspace/avila-crypto/: Cargo.toml
avila-core-workspace/avila-db/: Cargo.toml
avila-core-workspace/avila-math/: Cargo.toml
avila-core-workspace/avila-nucleus/: Cargo.toml
avila-crypto/: BUG_ECDSA.md  Cargo.toml  README.md  STATUS.md
avila-curve/: Cargo.toml
avila-darknet/: Cargo.toml  MAPPING.md  README.md
avila-dataframe/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.native  DEVELOPMENT.md  EXEMPLO_ESTUDANTES.md  FASE2_COMPLETO.md  FASE2_RESUMO.md  FASE3_IO_COMPLETO.md  INSTALACAO.md  LICENSE  NATIVE_MIGRATION.md  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  README_CRATE.md  README_NATIVE.md  copilot-instruction.md  copilot-instructions.md  migrate-to-native.ps1
avila-db/: Cargo.toml
avila-distributed-system/: Cargo.toml
avila-error/: Cargo.toml
avila-fft/: CLI.md  Cargo.toml  PERFORMANCE.md  README_NEW.md  sweep.txt  sweep_analysis.csv  sweep_spec.csv  tone440.txt
avila-framework/: Cargo.toml
avila-fungi/: Cargo.toml  README.md
avila-future/: Cargo.toml
(+2505 files in other folders)
