[workspace]
members = [
    ".",
    "avila",  # Meta-package for AVL Platform
    # Core Mathematical & Scientific Libraries
    "avila-arrow",  # Native columnar format with scientific types
    "avila-clustering",
    "avila-dataframe",
    "avila-geo",    # Geographic cartography and mapping
    "avila-linalg",
    "avila-math",
    "avila-ml",
    "avila-reduction",
    "avila-telemetry",
    "avila-compress",  # Native compression library (LZ4, Zstd)
    "avila-tokenizer", # Text tokenization

    # AVL Cloud Platform - Data & Storage
    "aviladb",         # NoSQL database (4MB docs, vector search, multi-region)
    "avl-storage",     # S3-compatible object storage (3-8ms Brazil)

    # AVL Cloud Platform - Infrastructure
    "avl-auth",        # IAM & authentication (JWT, OAuth2, RBAC)
    "avl-queue",       # Message queue & event streaming
    "avl-secrets",     # Secrets management (Vault-like)
    "avl-observability", # Metrics, logs, traces
    "avl-loadbalancer", # L7 load balancer
    "avl-console",     # Developer portal & web dashboard

    # AVX API & Gateway
    "avx-api-core",
    "avx-cli",
    "avx-config",
    "avx-events",
    "avx-gateway",
    # "avx-gpu", # Nested workspace - has its own sub-crates
    "avx-http",  # Native HTTP client/server for AVL Platform
    "avx-image",
    "avx-quantum-render",
    "avx-telemetry",
]
resolver = "2"

[package]
name = "arxis_quaternions"
version = "0.2.0"
edition = "2021"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "Arxis: The Mathematical Citadel - Research-grade physics engine with quaternions, tensors, 4D geometry, gravitational waves, and General Relativity. ARX (fortress) + AXIS (engine). | Arxis: A Cidadela Matemática - Motor de física para pesquisa com quaternions, tensores, geometria 4D, ondas gravitacionais e Relatividade Geral."
repository = "https://github.com/avilaops/arxis"
homepage = "https://arxis.avilaops.com"
documentation = "https://docs.rs/arxis_quaternions"
readme = "README.md"
keywords = [
    "physics",
    "quaternions",
    "gravitational-waves",
    "nasa-lisa",
    "4d-geometry",
]
categories = ["science", "mathematics", "simulation", "algorithms"]
exclude = [
    "target/",
    "*.swp",
    ".git*",
    "examples/*.ppm",
    "output_*.ppm",
    "*.png",
    "*.jpg",
]

[lib]
name = "arxis_quaternions"
path = "src/lib.rs"

[[example]]
name = "rotations_example"
path = "examples/rotations_example.rs"

[[example]]
name = "tensors_example"
path = "examples/tensors_example.rs"

[[example]]
name = "relativity_example"
path = "examples/relativity_example.rs"

[[example]]
name = "ml_example"
path = "examples/ml_example.rs"

[[example]]
name = "geometry4d_example"
path = "examples/geometry4d_example.rs"

[dependencies]
rand = "0.8"
rand_distr = "0.5"
chrono = { version = "0.4", features = ["serde"] }
avila-math = { path = "avila-math" }
avila-telemetry = { path = "avila-telemetry" }
rayon = "1.10"

# Big Data & Parallel Processing
avila-dataframe = { path = "avila-dataframe", features = ["full"] }
datafusion = "43.0" # SQL query engine para big data
arrow = "53.0" # Apache Arrow (columnar format)
parquet = "53.0" # Parquet file format

# Machine Learning & Deep Learning (USING OUR OWN TOOLS! 🚀)
avila-ml = { path = "avila-ml", features = ["full"] }
avila-clustering = { path = "avila-clustering" }
avila-reduction = { path = "avila-reduction" }
avila-linalg = { path = "avila-linalg" }
ndarray = { version = "0.16", features = ["rayon", "serde"] }
# smartcore = "0.3"  # Replaced by avila-ml
# linfa = "0.7"     # Replaced by avila-ml
# candle-core = "0.7"  # Hugging Face ML framework (incompatível com rand_distr)
# candle-nn = "0.7"

# LLM & NLP
tokenizers = "0.20" # Hugging Face tokenizers
hf-hub = "0.3"      # Download models from Hugging Face
llm-chain = "0.13"  # LLM chaining framework
tiktoken-rs = "0.5" # OpenAI tokenizer

# Computer Vision (USING OUR OWN TOOLS! 🚀)
avx-image = { path = "avx-image" }
# image = "0.25"        # Replaced by avx-image
# imageproc = "0.25"    # Replaced by avx-image
rustfft = "6.2"    # FFT (já usado em avila-telemetry)

# Graph Analytics & Network Science
petgraph = "0.6"     # Graph data structures
pathfinding = "4.11" # Pathfinding algorithms

# Statistical Analysis (USING OUR OWN TOOLS! 🚀)
# Already using avila-telemetry which includes statrs functionality
# statrs = "0.17"   # Replaced by avila-telemetry
# nalgebra = "0.33" # Replaced by avila-linalg

# Time Series (complementar ao avila-telemetry)
prophet = { version = "0.1", optional = true } # Facebook Prophet (se disponível)

# Distributed Computing
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization for ML models
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]
