[package]
name = "avila-aead"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "AEAD ciphers (ChaCha20-Poly1305, AES-GCM)"
repository = "https://github.com/avilaops/arxis"
keywords = ["aead", "chacha20", "poly1305", "aes-gcm", "no-std"]
categories = ["cryptography", "no-std"]

[lib]
name = "avila_aead"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
avila-error = { path = "../avila-error" }
avila-hash = { path = "../avila-hash" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
