[package]
name = "avila-analises"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-full"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data e hora
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections e utilidades
dashmap = "6.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Análise estatística
statrs = "0.17"

# Database (AvilaDB placeholder - será substituído pelo SDK real)
# aviladb = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], optional = true }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Auth & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
sha2 = "0.10"

# Rate limiting
governor = "0.6"

# CSV export
csv = "1.3"

# Parquet export
parquet = { version = "50.0", optional = true }
arrow = { version = "50.0", optional = true }

# Environment variables
dotenvy = "0.15"

# Once cell for static variables
once_cell = "1.19"

# Random number generation
rand = "0.8"

[features]
default = []
full = ["sqlx", "redis", "parquet", "arrow"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "industry40"
path = "src/industry40_demo.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "behavior_analysis"
harness = false
