[package]
name = "avila-atom"
version = "0.1.0"
edition = "2021"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "Lock-free atomic primitives and operations - Layer 1 Foundation"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["atomic", "concurrency", "lock-free", "no-std", "primitives"]
categories = ["concurrency", "no-std", "algorithms"]

[lib]
name = "avila_atom"
path = "src/lib.rs"

[dependencies]
avila-primitives = { version = "0.1.0", path = "../avila-primitives" }

[features]
default = []
std = []

[workspace]
# Empty workspace to prevent inheriting from parent

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
