[package]
name = "avila-cell"
version = "0.1.0"
edition = "2021"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "Email protocol cells - SMTP, POP3, IMAP - First digital life form"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["email", "smtp", "pop3", "imap", "mail"]
categories = ["network-programming", "email"]

[lib]
name = "avila_cell"
path = "src/lib.rs"

[dependencies]
# avila-nucleus (excluded)
avila-atom = { path = "../avila-atom", version = "0.1.0" }
avila-molecule = { path = "../avila-molecule", version = "0.1.0" }
avila-error = { path = "../avila-error", version = "0.1.0" }
avila-time = { path = "../avila-time", version = "0.1.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
