[package]
name = "avila-cell"
version = "0.4.0"
edition = "2021"
authors = [
    "N?colas ?vila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "Advanced email protocol cells - SMTP/POP3/IMAP with MIME multipart, Base64, authentication, HTML emails - First digital life form"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["email", "smtp", "pop3", "imap", "mail"]
categories = ["network-programming", "email"]

[workspace]

[lib]
name = "avila_cell"
path = "src/lib.rs"

[dependencies]
avila-atom = "0.4.0"
avila-molecule = "0.1.0"
avila-error = "0.2.0"
avila-time = "0.1.0"
avila-async = "0.4.0"
avila-crypto = "0.1.0"
avila-regex = "0.1.0"
avila-serde = "0.2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
