[package]
name = "avila-cli"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "AVL Platform CLI framework - replacement for clap"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["cli", "command-line", "args", "avila", "avl"]

[dependencies]
# Zero dependências - Rust std apenas

[lib]
name = "avila_cli"
path = "src/lib.rs"
