[package]
name = "avila-cli"
version = "0.3.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Ávila CLI Parser - Zero-dependency command-line argument parser with compile-time guarantees"
repository = "https://github.com/avilaops/arxis"
homepage = "https://avila.inc"
keywords = ["cli", "parser", "arguments", "zero-alloc", "no-std"]

[dependencies]
# Zero dependências - Rust std apenas

[lib]
name = "avila_cli"
path = "src/lib.rs"
