[package]
name = "avila-clustering"
version = "0.1.0"
edition = "2021"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
description = "State-of-the-art clustering algorithms for Rust - surpassing scikit-learn, HDBSCAN, and RAPIDS cuML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avilacloud/avila-clustering"
keywords = ["clustering", "machine-learning", "hdbscan", "kmeans", "science"]
categories = ["algorithms", "science"]

[workspace]
# Empty workspace to avoid parent workspace conflicts

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "serde"] }
# ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
ndarray-stats = "0.5"
ndarray-rand = "0.14"
rayon = "1.8"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
rand_xoshiro = "0.6"
petgraph = "0.6"
kiddo = "4.0"                                      # KD-tree
approx = "0.5"

# Scientific computing
nalgebra = "0.32"
sprs = "0.11"     # Sparse matrices

# Optional GPU support
[dependencies.cudarc]
version = "0.9"
optional = true

[dependencies.wgpu]
version = "22"
optional = true

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
gpu = ["cudarc"]
gpu-wgpu = ["wgpu"]
full = ["gpu", "gpu-wgpu"]
