[package]
name = "avila-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Configuration management with environment variables and files"
repository = "https://github.com/avilaops/arxis"
keywords = ["config", "environment", "settings", "no-std"]
categories = ["config", "data-structures"]

[lib]
name = "avila_config"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
avila-error = { path = "../avila-error" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
