[workspace]
members = [
    "avila-nucleus",
    "avila-primitives",
    "avila-math",
    "avila-crypto",
    "avila-quinn",
    "avila-db"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.0.0"
publish = ["crates-io"]
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>"
]
rust-version = "1.70"

[workspace.metadata.avila]
domain = "core"
release_tag_prefix = "core-"
summary = "AvilaDB - Banco de dados soberano com criptografia de ponta e protocolo QUIC nativo"

[workspace.dependencies]
# Zero external dependencies - tudo implementado do zero
# Apenas std library do Rust
